RESOLVED FIXED43780
Web Inspector, Chromium: reloading of inspected page hits assert in InspectorController::enableDebuggerFromFrontend()
https://bugs.webkit.org/show_bug.cgi?id=43780
Summary Web Inspector, Chromium: reloading of inspected page hits assert in Inspector...
Andrey Kosyakov
Reported 2010-08-10 03:15:01 PDT
1. Open any page 2. Open inspector 3. Reload the page Inspected page renderer hits assertion in InspectorController::enableDebuggerFromFrontend(): > chrome.dll!WebCore::InspectorController::enableDebuggerFromFrontend(bool always=false) Line 1621 + 0x2b bytes C++ chrome.dll!WebCore::InspectorController::connectFrontend(const WebCore::ScriptObject & webInspector={...}) Line 490 C++ chrome.dll!WebKit::WebDevToolsAgentImpl::frontendLoaded() Line 272 + 0x34 bytes C++ chrome.dll!WebKit::WebDevToolsAgentImpl::setRuntimeFeatureEnabled(const WebKit::WebString & feature={...}, bool enabled=true) Line 315 + 0xf bytes C++ chrome.dll!DevToolsAgent::OnAttach(const std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > & runtime_features=[1]("frontend-connected")) Line 174 + 0x27 bytes C++ chrome.dll!DispatchToMethod<DevToolsAgent,void (__thiscall DevToolsAgent::*)(std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > const &),std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > >(DevToolsAgent * obj=0x01989540, void (const std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > &)* method=0x568ecab0, const Tuple1<std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > > & arg={...}) Line 499 + 0xc bytes C++ chrome.dll!IPC::MessageWithTuple<Tuple1<std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > > >::Dispatch<DevToolsAgent,void (__thiscall DevToolsAgent::*)(std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > const &)>(const IPC::Message * msg=class=176, index=0, DevToolsAgent * obj=0x01989540, void (const std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > &)* func=0x568ecab0) Line 1049 + 0x11 bytes C++ chrome.dll!DevToolsAgent::OnMessageReceived(const IPC::Message & message=class=176, index=0) Line 79 + 0x12 bytes C++
Attachments
Patch (11.38 KB, patch)
2010-08-10 05:33 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2010-08-10 05:33:28 PDT
Yury Semikhatsky
Comment 2 2010-08-10 05:42:58 PDT
Committed r65068
Note You need to log in before you can comment on or make changes to this bug.