WebCore/inspector/InspectorDebuggerAgent.h
@@ -47,7 +47,7 @@ class RemoteInspectorFrontend;
 
 class InspectorDebuggerAgent : public ScriptDebugListener, public Noncopyable {
 public:
-    static PassOwnPtr<InspectorDebuggerAgent> create(InspectorController*);
+    static PassOwnPtr<InspectorDebuggerAgent> create(InspectorController*, RemoteInspectorFrontend*);
     virtual ~InspectorDebuggerAgent();
 
     static bool isDebuggerAlwaysEnabled();
@@ -73,7 +73,7 @@ public:
     static String md5Base16(const String& string);
 
 private:
-    InspectorDebuggerAgent(InspectorController*);
+    InspectorDebuggerAgent(InspectorController*, RemoteInspectorFrontend*);
 
     PassRefPtr<InspectorValue> currentCallFrames();
 
@@ -85,9 +85,8 @@ private:
     virtual void didPause(ScriptState*);
     virtual void didContinue();
 
-    RemoteInspectorFrontend* remoteFrontend() const;
-
     InspectorController* m_inspectorController;
+    RemoteInspectorFrontend* m_remoteFrontend;
     ScriptState* m_pausedScriptState;
     HashMap<String, String> m_sourceIDToURL;
     HashMap<String, String> m_scriptIDToContent;
